@@ -1,4 +1,8 @@
-﻿w17 27.12.2015 11:08:48 +0300 - build 4492
+﻿drkns 28.12.2015 15:28:08 +0200 - build 4493
+
+1. Рефакторинг.
+
+w17 27.12.2015 11:08:48 +0300 - build 4492
 
 1. M#3142: Сломана вставка текста из борландовской IDE
 
